--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ hr {
 }
 nav {
     display: flex;
-    padding: 2% 6%;
+    padding: 2% 3%;
     justify-content: space-between;
     align-items: center;
 }
@@ -121,7 +121,7 @@ nav #bars {
     cursor: pointer;
 }
 .hero-btn:hover {
-    /* border: 0; */
+    border: 0;
     background: #FBAB7E;
     transition: 1s;
 }
@@ -555,23 +555,11 @@ form button {
         z-index: 300;
         opacity: 1;
     }
-    /* .nav-links {
-        position: absolute;
-        background: #ffad06;
-        height: 35vh;
-        width: 40%;
-        top: 0;
-        right: -40%;
-        border-bottom-left-radius: 30px;
-        text-align: right;
-        z-index: 2;
-        transition: 1s;
-    } */
     .nav-links {
         width: 0;
         height: 0;
         position: absolute;
-        background: rgba(0,0,0,0.8);
+        background: linear-gradient(#fbab7e, #f7ce68);
         top: 0;
         right: 0;
         display: flex;
@@ -605,6 +593,7 @@ form button {
         display: none;
     }
     .nav-links ul li a {
+        /* color: #5c1600; */
         font-size: 25px;
         display: inline-block;
         position: relative;
@@ -614,7 +603,22 @@ form button {
         color: #FBAB7E;
         font-weight: 800;
     }
-    /* nav .icon {
+    .row {
+        flex-direction: column;
+    }
+    /* .nav-links {
+        position: absolute;
+        background: #ffad06;
+        height: 35vh;
+        width: 40%;
+        top: 0;
+        right: -40%;
+        border-bottom-left-radius: 30px;
+        text-align: right;
+        z-index: 2;
+        transition: 1s;
+    }
+    nav .icon {
         display: block;
         margin-top: 5px;
         margin-left: 120px;
@@ -624,7 +628,4 @@ form button {
     nav .close {
         position: fixed;
     } */
-    .row {
-        flex-direction: column;
-    }
 }
