--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ hr {
 .header {
     min-height: 100vh;
     width: 100%;
-    background: linear-gradient(rgba(0,0,0,0.8), rgba(0,0,0,0.8)), url(img/Learn.jpg);
+    background: linear-gradient(rgba(0,0,0,0.8), rgba(17,4,0,1)), url(img/Learn.jpg);
     background-position: center;
     background-size: cover;
     position: relative;
@@ -31,7 +31,7 @@ hr {
 .sub-header {
     height: 50vh;
     width: 100%;
-    background: linear-gradient(rgba(0,0,0,0.8), rgba(0,0,0,0.8)), url(img/Learn.jpg);
+    background: linear-gradient(rgba(0,0,0,0.8), rgba(0,0,0,1)), url(img/Learn.jpg);
     background-position: center;
     background-size: cover;
     position: relative;
@@ -122,7 +122,7 @@ nav #bars {
 }
 .hero-btn:hover {
     border: 0;
-    background: #FBAB7E;
+    background: #5c1600;
     transition: 1s;
 }
 
@@ -150,7 +150,7 @@ nav #bars {
 }
 .pro-col {
     flex-basis: 24%;
-    background: rgba(0,0,0,0.3);
+    background: rgba(92,22,0,0.5);
     border-radius: 10px;
     margin-bottom: 5%;
     padding: 20px 12px;
@@ -260,7 +260,7 @@ nav #bars {
 .about-col {
     flex-basis: 48%;
     padding: 30px 2px;
-    background: rgba(0,0,0,0.3);
+    background: rgba(92,22,0,0.5);
     border-radius: 10px;
     margin-bottom: 5%;
     box-sizing: border-box;
@@ -559,7 +559,7 @@ form button {
         width: 0;
         height: 0;
         position: absolute;
-        background: linear-gradient(#fbab7e, #f7ce68);
+        background: linear-gradient(rgba(251,171,126,0.8), rgba(247,206,104,0.95));
         top: 0;
         right: 0;
         display: flex;
@@ -593,14 +593,15 @@ form button {
         display: none;
     }
     .nav-links ul li a {
-        /* color: #5c1600; */
+        color: #5c1600;
         font-size: 25px;
         display: inline-block;
         position: relative;
         transition: 1s;
     }
     .nav-links ul li a:hover {
-        color: #FBAB7E;
+        /* color: #FBAB7E; */
+        color: #efe;
         font-weight: 800;
     }
     .row {
