--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ hr {
 .sub-header {
     height: 50vh;
     width: 100%;
-    background: linear-gradient(rgba(0,0,0,0.8), rgba(0,0,0,1)), url(img/Learn.jpg);
+    background: linear-gradient(rgba(0,0,0,0.8), rgba(17,4,0,1)), url(img/Learn.jpg);
     background-position: center;
     background-size: cover;
     position: relative;
@@ -278,9 +278,10 @@ nav #bars {
 
 /* Registration Page */
 .container {
-    width: 100%;
-    height: 100vh;
-    background: linear-gradient(62deg, #FBAB7E, #F7CE68);
+    min-width: 80%;
+    min-height: 100vh;
+    margin: auto;
+    /* background: linear-gradient(62deg, #FBAB7E, #F7CE68); */
     position: relative;
     overflow: hidden;
 }
@@ -292,7 +293,6 @@ nav #bars {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    margin: auto;
     background: rgba(0,0,0,0.3);
     border-radius: 25px;
     padding: 10px 20px;
