--- a/style.css
+++ b/style.css
@@ -548,9 +548,9 @@ form button {
     }
     nav #bars {
         width: 35px;
-        position: absolute;
+        position: fixed;
         top: 50px;
-        right: 40px;
+        right: 30px;
         cursor: pointer;
         z-index: 300;
         opacity: 1;
@@ -558,8 +558,8 @@ form button {
     .nav-links {
         width: 0;
         height: 0;
-        position: absolute;
-        background: linear-gradient(rgba(251,171,126,0.8), rgba(247,206,104,0.95));
+        position: fixed;
+        background: linear-gradient(rgba(0,0,0,0.8), rgba(17,4,0,1));
         top: 0;
         right: 0;
         display: flex;
@@ -593,7 +593,7 @@ form button {
         display: none;
     }
     .nav-links ul li a {
-        color: #5c1600;
+        color: #fff;
         font-size: 25px;
         display: inline-block;
         position: relative;
