--- a/style.css
+++ b/style.css
@@ -278,9 +278,10 @@ nav #bars {
 
 /* Registration Page */
 .container {
-    max-width: 50%;
+    min-width: 80%;
     min-height: 100vh;
     margin: auto;
+    padding: 80px 0;
     /* background: linear-gradient(62deg, #FBAB7E, #F7CE68); */
     position: relative;
     overflow: hidden;
