--- a/style.css
+++ b/style.css
@@ -505,6 +505,7 @@ form button {
 .contact-col {
     flex-basis: 48%;
     margin-bottom: 20px;
+    box-sizing: border-box;
 }
 .contact-col div {
     display: flex;
@@ -517,7 +518,7 @@ form button {
     margin-right: 10px;
 }
 .contact-col div h5 {
-    font-size: 20px;
+    font-size: 18px;
     margin-bottom: 5px;
     font-weight: 500;
 }
@@ -529,12 +530,13 @@ form button {
     padding: 15px;
     margin-bottom: 15px;
     outline: none;
-    border: 1px solid #efe;
+    border: 1px solid #5c1600;
     background: transparent;
-    color: #efe;
+    color: #5c1600;
+    font-size: 15px;
 }
 ::placeholder {
-    color: #999;
+    color: #5c1600;
 }
 
 
