--- a/style.css
+++ b/style.css
@@ -15,17 +15,18 @@ hr {
     width: 80%;
     height: 1px;
     border: 0;
-    background: #efe;
+    background: #fff;
 }
 
-/* Home Page */
+/* Home Page & Utilities */
 .header {
-    min-height: 100vh;
-    width: 100%;
+    height: 100vh;
+    /* width: 100%; */
     background: linear-gradient(rgba(0,0,0,0.8), rgba(17,4,0,1)), url(img/Learn.jpg);
     background-position: center;
     background-size: cover;
     position: relative;
+    padding: 0 20px;
     overflow: hidden;
 }
 .sub-header {
@@ -41,7 +42,7 @@ hr {
 }
 .sub-header h1 {
     width: 90%;
-    color: #efe;
+    color: #fff;
     position: absolute;
     left: 50%;
     top: 50%;
@@ -50,9 +51,12 @@ hr {
     margin-top: 60px;
     font-size: 40px;
 }
+
+
+/* Main Home & Navigation */
 nav {
     display: flex;
-    padding: 2% 3%;
+    padding: 2% 2%;
     justify-content: space-between;
     align-items: center;
 }
@@ -73,7 +77,7 @@ nav #bars {
     position: relative;
 }
 .nav-links ul li a {
-    color: #efe;
+    color: #fff;
     text-decoration: none;
     font-size: 15px;
     font-weight: 500;
@@ -93,7 +97,7 @@ nav #bars {
 }
 .text-box {
     width: 90%;
-    color: #efe;
+    color: #fff;
     position: absolute;
     left: 50%;
     top: 50%;
@@ -109,15 +113,15 @@ nav #bars {
     line-height: 1.3;
 }
 .hero-btn {
-    display: inline-block;
+    /* display: inline-block; */
     text-decoration: none;
-    color: #efe;
-    border: 1px solid #efe;
+    color: #fff;
+    border: 1px solid #fff;
     border-radius: 5px;
     padding: 12px 35px;
     font-size: 15px;
     background: transparent;
-    position: relative;
+    /* position: relative; */
     cursor: pointer;
 }
 .hero-btn:hover {
@@ -132,15 +136,15 @@ nav #bars {
     width: 80%;
     margin: auto;
     text-align: center;
-    padding-top: 80px;
+    padding: 50px 0;
 }
 .programmes h1 {
     font-weight: 800;
 }
 .programmes p {
-    color: #efe;
+    color: #fff;
     font-size: 14px;
-    font-weight: 300;
+    font-weight: 500;
     padding: 10px;
 }
 .row {
@@ -152,7 +156,7 @@ nav #bars {
     flex-basis: 24%;
     background: rgba(92,22,0,0.5);
     border-radius: 10px;
-    margin-bottom: 5%;
+    margin: 10px 0;
     padding: 20px 12px;
     box-sizing: border-box;
     transition: 0.5s
@@ -164,7 +168,7 @@ nav #bars {
     margin: 10px 0;
 }
 .pro-col p {
-    color: #efe;
+    color: #fff;
 }
 .pro-col:hover {
     box-shadow: 0 0 20px 0 rgba(0,0,0,0.3);
@@ -175,7 +179,7 @@ nav #bars {
     width: 80%;
     margin: auto;
     text-align: center;
-    padding-top: 50px;
+    padding-bottom: 50px;
     color: #efe;
 }
 .faculty h1 {
@@ -184,13 +188,13 @@ nav #bars {
 .faculty p {
     color: #efe;
     font-size: 14px;
-    font-weight: 300;
+    font-weight: 500;
     padding: 10px;
 }
 .faculty-col {
     flex-basis: 32%;
     border-radius: 10px;
-    margin-bottom: 30px;
+    margin-top: 10px;
     position: relative;
     overflow: hidden;
 }
@@ -521,9 +525,11 @@ form button {
     font-size: 18px;
     margin-bottom: 5px;
     font-weight: 500;
+    color: #5c1600;
 }
 .contact-col div p {
     padding: 0;
+    color: #5c1600;
 }
 .contact-col input, .contact-col textarea {
     width: 100%;
@@ -536,13 +542,13 @@ form button {
     font-size: 15px;
 }
 ::placeholder {
-    color: #5c1600;
+    color: #ca3608;
 }
 
 
 
 
-@media (max-width:700px) {
+@media (max-width:480px) {
     .text-box h1 {
         font-size: 35px;
     }
