--- a/style.css
+++ b/style.css
@@ -292,7 +292,7 @@ nav #bars {
 /* Registration Page */
 .container {
     display: flex;
-    height: 100vh;
+    min-height: 100vh;
     justify-content: center;
     align-items: center;
 }
