--- a/style.css
+++ b/style.css
@@ -294,9 +294,9 @@ nav #bars {
     margin: 0 30px;
     border-radius: 10px;
 }
-#move2 {
+/* #move2 {
     display: none;
-}
+} */
 .title {
     font-size: 25px;
     font-weight: 600;
