--- a/style.css
+++ b/style.css
@@ -291,7 +291,7 @@ nav #bars {
     max-width: 650px;
     background: rgba(92,22,0,0.5);
     padding: 30px;
-    margin: 20px 30px;
+    margin: 30px;
     border-radius: 10px;
 }
     #move2 {
